wp-content/themes/thinkery/style.css
/* ... */
.tribe-events-list.tribe-events-day a.url {
	display: block;
}

.tribe-events-day .tribe-events-day-time-slot .tribe-events-day-time-slot-heading:after {
	content: "";
	border-bottom: 1px solid #e7ecf3;
	width: 88%;
	float: right;
	padding-top: 7px;
}

.tribe-events-day .tribe-events-day-time-slot .tribe-events-day-time-slot-heading {
	background: none;
	padding: 0;
}

.tribe-events-list.tribe-events-day .type-tribe_events {
	border-bottom: none;
	border-radius: 4px;
}


#tribe-events-footer .tribe-events-sub-nav, #tribe-events-header .tribe-events-sub-nav {
	overflow: visible;
}

.tribe-events-list .type-tribe_events {
	padding: 2.25em;
}

/* Recurring Event Info */

span.tribe-events-divider {
	padding: 0 10px;
}
#tribe-events-content .event-is-recurring,
#tribe-events-content .event-is-recurring:hover {
	color: #ffffff;
	font-weight: 700;
}
.tribe-events-list.tribe-events-day a.url {
	display: inline-block;
}

#tribe-events-content .event-is-recurring a:not(.url) {
	background-color: #ffffff;
	color: #1b2432;
	padding: 3px 5px 3px 8px;
	margin: 0 5px;
	border-radius: 50px;
	cursor: pointer;
}
#tribe-events-content .event-is-recurring a:not(.url):hover {
	background-color: #1b2432;
	color: #ffffff;
}
#tribe-events-content a:hover {
	color: #1b2432;
}
.recurring-info-tooltip.tribe-events-tooltip {
	width: 270px;
	border: 2px solid white;
	color: #1b2432;
	background-color: #ffffff;
}
.tribe-events-tooltip .tribe-events-event-body {
	font-size: 12px;
	font-weight: 700;
	padding: 10px 10px 0px;
}
.recurring-info-tooltip p:last-child {
	margin-bottom: 0;
}
.tribe-events-tooltip .tribe-events-arrow {
	background-image: none;
	position: absolute;
	bottom: -2px;
	left: 0;
	right: 0;
	width: 22px;
	margin: 0 auto;
}
span.tribe-events-arrow::after {
	content: '';
	position: absolute;
	top: 100%;
	left: 0;
	right: 0;
	margin: 0 auto;
	width: 100%;
	height: 0;
	border-top: solid 10px #ffffff;
	border-left: solid 10px transparent;
	border-right: solid 10px transparent;
}

.single-tribe_events .tribe-events-single-event-recurrence-description>a {
	background-color: #c6101c;
	color: #ffffff;
	padding: 1px 10px;
	margin: 0 5px;
	border-radius: 50px;
	cursor: pointer;
}
.single-tribe_events .tribe-events-single-event-recurrence-description>a:hover {
	color: #ffffff;
}

/* Next / Previous  Links */

#legend_box {
	clear: both;
}
#tribe-events-header {
	margin-bottom: 0;
}
#tribe-events-footer {
	display: none;
}
ul.tribe-events-sub-nav {
	position: absolute;
	right: 0;
	top: 0;
}
ul.tribe-events-sub-nav li {
	position: absolute;
}
ul.tribe-events-sub-nav li.tribe-events-nav-next {
	right: 0;
}
ul.tribe-events-sub-nav li.tribe-events-nav-previous {
	right: 22px;
}
.tribe-events-nav-previous a,
.tribe-events-nav-next a {
	color: transparent;
}
.tribe-events-nav-previous a::before,
.tribe-events-nav-next a::before {
	color: #ffffff;
	font-family: "Font Awesome 5 Free";
	font-size: 20px;
	font-weight: bold;
	border-radius: 50%;
	height: 32px;
	width: 32px;
	position: absolute;
	padding: 6px 8px;
	top: 0;
}

.tribe-events-nav-previous a::before {
	content: "\f053";
	background-color: #c4c5d4;
	left: 0;
}
.tribe-events-nav-next a::before {
	content: "\f054";
	background-color:  #1b2432;
	right: 0;
}
.tribe-events-nav-previous a:hover::before,
.tribe-events-nav-next a:hover::before {
	background-color: #c6101c;
}

.tribe-events-week-grid .tribe-events-nav-pagination {
	height: 50px;
}

/* Modern Tribe Events Calendar Add-On: The Events Calendar Category Colors */
.teccc-legend ul {
	padding-left: 0;
	display: flex;
	flex-wrap: wrap;
}
#legend_box.teccc-legend ul li {
	text-align: center;
	font-size: 12px;
	line-height: 1.33;
	margin: 0 8px 8px 0;
	border-radius: 16px;
	padding: 0;
}
.teccc-legend li a {
	padding: 8px 16px;
	display: block;
}
.teccc-legend ul li::before {
	display: none;
}
/* Hide categories in legend only
 * (TECC hide feature hides everywhere, need to retain chosen color as background)
 */
.teccc-legend li.tribe-events-category-open-to-public, /* Closed to public */
.teccc-legend li.tribe-events-category-closed-to-public { /* Open to public */
	display: none;
}

/* Mini Calendar */
.tribe-mini-calendar-wrapper .tribe-mini-calendar thead {
	background-color: #ffffff;
	border: 1px solid #e7ecf3;
}

.tribe-mini-calendar-wrapper .tribe-mini-calendar td, .tribe-mini-calendar th {
	font-size: 14px;
}

.tribe-mini-calendar-wrapper .tribe-mini-calendar-nav-link  {
	color: #c4c5d4;
}
.tribe-mini-calendar-wrapper .tribe-mini-calendar-nav span {
	color: #c6101c;
	font-family: museo-sans, sans-serif;
	font-size: 14px;
	text-transform: capitalize;
	padding: 16px 0;
}
.tribe-mini-calendar-wrapper .tribe-mini-calendar-dayofweek {
	background-color: #ffffff;
	padding: 8px;
}

.tribe-mini-calendar-wrapper a.tribe-mini-calendar-nav-link span {
	height: 1px;
	color: transparent;
}
a.tribe-mini-calendar-nav-link span::before {
	color: grey;
	font-family: "Font Awesome 5 Free";
	font-size: 12px;
	font-weight: bold;
	border-radius: 50%;
	height: 12px;
	width: 8px;
	position: absolute;
	padding: 10px 24px;
	top: 0;
}

a.tribe-mini-calendar-nav-link  {
	position: absolute;
	top: 0;
	width: 40px;
	margin: 0;
}
a.tribe-mini-calendar-nav-link.next-month {
	right: 0;
}

a.tribe-mini-calendar-nav-link.prev-month {
	left: 0;
}


a.tribe-mini-calendar-nav-link span::before {
	top: 8px;
}

a.tribe-mini-calendar-nav-link.prev-month span::before {
	content: "\f053";
	left: 0;
}
a.tribe-mini-calendar-nav-link.next-month span::before {
	content: "\f054";
	right: 0;
}

.tribe-mini-calendar-wrapper .tribe-mini-calendar .tribe-events-present,
.tribe-mini-calendar-wrapper .tribe-mini-calendar .tribe-mini-calendar-today {
	background-color: #c6101c;
}

.tribe-mini-calendar-wrapper .tribe-mini-calendar .tribe-events-has-events div[id*=daynum-] a:before {
	display: none;
}
/* ... */

